# llm-japanese-gec

./: .gitignore  main.py  pyproject.toml
configs/: wikipedia.yaml
models/: base_model.py  model.py
scripts/predict/: gemma.py  gpt_oss.py  llmjp.py  qwen.py  swallow.py
scripts/train/: gemma.py  gpt_oss.py  llmjp.py  qwen.py  swallow.py
srcs/predict/: gemma.sh  gpt_oss.sh  llmjp.sh  qwen.sh  swallow.sh
srcs/train/: gemma.sh  gpt_oss.sh  llmjp.sh  qwen.sh  swallow.sh
utils/: preprocess.py
