[project]
name = "llm-japanese-gec"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets==4.0.0",
    "peft==0.17.1",
    "sentencepiece==0.2.1",
    "tiktoken>=0.12.0",
    "torch==2.8.0",
    "transformers==4.56.0",
    "trl==0.19.0",
]
